[project]
name = "flowpay"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.123.10",
    "httpx>=0.28.1",
    "pika>=1.3.2",
    "pre-commit>=4.5.0",
    "psycopg2>=2.9.11",
    "pytest-asyncio>=1.3.0",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "ruff>=0.14.8",
    "bandit>=1.9.2",
    "mypy>=1.19.0",
    "pytest>=9.0.1",
    "pytest-mock>=3.15.1",
]

[tool.ruff]
# 預設88
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# 啟用 Pyflakes (F), pycodestyle (E, W), isort (I), bandit (S), flake8-bugbear (B)
select = ["E", "F", "W", "I", "S", "B"]
ignore = []

[tool.ruuf.lint.isort]
known-first-party = ["flowpay"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.pytest.ini_options]
# 告訴 pytest 根目錄在哪，以及把根目錄加入 python path
pythonpath = "."
testpaths = ["tests"]
# 讓 log 在測試失敗時印出來，方便 debug
log_cli = true
log_cli_level = "INFO"
# 開啟自動模式，不用手寫 decorator
asyncio_mode = "auto"
# 設定 Loop 的生命週期 (新版 pytest-asyncio 要求)
asyncio_default_fixture_loop_scope = "function"